Se creó con Colab

--- a/CS224W_Colab4.ipynb
+++ b/CS224W_Colab4.ipynb
@@ -84,10 +84,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "J_m9l6OYCQZP",
-        "outputId": "5082eae5-4c09-439f-d368-196fc292825e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "678bc9ed-03f6-4ef5-fd79-68464a48283e"
       },
       "source": [
         "# Install torch geometric\n",
@@ -101,30 +101,20 @@
         "  !pip install torch-sparse -f $sparse_src\n",
         "  !pip install torch-geometric"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in links: https://pytorch-geometric.com/whl/torch-2.2.1+cu121.html\n",
-            "Collecting torch-scatter\n",
-            "  Downloading https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_scatter-2.1.2%2Bpt22cu121-cp310-cp310-linux_x86_64.whl (10.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m72.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: torch-scatter\n",
-            "Successfully installed torch-scatter-2.1.2+pt22cu121\n",
+            "Requirement already satisfied: torch-scatter in /usr/local/lib/python3.10/dist-packages (2.1.2+pt22cu121)\n",
             "Looking in links: https://pytorch-geometric.com/whl/torch-2.2.1+cu121.html\n",
-            "Collecting torch-sparse\n",
-            "  Downloading https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_sparse-0.6.18%2Bpt22cu121-cp310-cp310-linux_x86_64.whl (5.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m49.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch-sparse) (1.11.4)\n",
+            "Requirement already satisfied: torch-sparse in /usr/local/lib/python3.10/dist-packages (0.6.18+pt22cu121)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch-sparse) (1.11.4)\n",
             "Requirement already satisfied: numpy<1.28.0,>=1.21.6 in /usr/local/lib/python3.10/dist-packages (from scipy->torch-sparse) (1.25.2)\n",
-            "Installing collected packages: torch-sparse\n",
-            "Successfully installed torch-sparse-0.6.18+pt22cu121\n",
-            "Collecting torch-geometric\n",
-            "  Downloading torch_geometric-2.5.3-py3-none-any.whl (1.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (4.66.4)\n",
+            "Requirement already satisfied: torch-geometric in /usr/local/lib/python3.10/dist-packages (2.5.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (4.66.4)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (1.25.2)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (1.11.4)\n",
             "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (2023.6.0)\n",
@@ -146,9 +136,7 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (2.0.7)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (2024.2.2)\n",
             "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch-geometric) (1.4.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch-geometric) (3.5.0)\n",
-            "Installing collected packages: torch-geometric\n",
-            "Successfully installed torch-geometric-2.5.3\n"
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch-geometric) (3.5.0)\n"
           ]
         }
       ]
@@ -157,17 +145,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "PRfgbfTjCRD_",
-        "outputId": "f17ba76a-94fc-4ab5-b0a1-cba95c17168a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "3ac5f82e-da4e-4575-8c1e-77cbabab29f6"
       },
       "source": [
         "import torch_geometric\n",
         "torch_geometric.__version__"
       ],
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +168,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 11
         }
       ]
     },
@@ -292,7 +280,7 @@
         "    def loss(self, pred, label):\n",
         "        return F.nll_loss(pred, label)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -457,8 +445,8 @@
         "\n",
         "        ############################################################################\n",
         "\n",
-        "        self.lin_l = nn.Linear(in_channels, heads * out_channels, bias=False)\n",
-        "        self.lin_r = nn.Linear(in_channels, heads * out_channels, bias=False)\n",
+        "        self.lin_l = nn.Linear(self.in_channels, self.heads * self.out_channels, bias=False)\n",
+        "        self.lin_r = nn.Linear(self.in_channels, self.heads * self.out_channels, bias=False)\n",
         "\n",
         "        ############################################################################\n",
         "        # TODO: Your code here!\n",
@@ -467,8 +455,8 @@
         "        # Use nn.Parameter instead of nn.Linear\n",
         "        # Our implementation is ~2 lines, but don't worry if you deviate from this.\n",
         "\n",
-        "        self.att_l = nn.Parameter(torch.Tensor(1, heads, out_channels))\n",
-        "        self.att_r = nn.Parameter(torch.Tensor(1, heads, out_channels))\n",
+        "        self.att_l = nn.Parameter(torch.Tensor(1, self.heads, self.out_channels))\n",
+        "        self.att_r = nn.Parameter(torch.Tensor(1, self.heads, self.out_channels))\n",
         "\n",
         "        ############################################################################\n",
         "\n",
@@ -496,6 +484,8 @@
         "        #    3.2 See there for more information: https://pytorch-geometric.readthedocs.io/en/latest/notes/create_gnn.html\n",
         "        # 4. Transform the output back to the shape of [N, H * C].\n",
         "        # Our implementation is ~5 lines, but don't worry if you deviate from this.\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "        ############################################################################\n",
