Se creó con Colab

--- a/CS224W_Colab4.ipynb
+++ b/CS224W_Colab4.ipynb
@@ -485,7 +485,13 @@
         "        # 4. Transform the output back to the shape of [N, H * C].\n",
         "        # Our implementation is ~5 lines, but don't worry if you deviate from this.\n",
         "\n",
+        "        x_l = self.lin_l(x).view(-1, H, C)\n",
+        "        x_r = self.lin_r(x).view(-1, H, C)\n",
         "\n",
+        "        alpha_l = (x_l * self.att_l).sum(dim=-1).unsqueeze(-1)\n",
+        "        alpha_r = (x_r * self.att_r).sum(dim=-1).unsqueeze(-1)\n",
+        "\n",
+        "        out = self.propagate(edge_index, x=(x_l, x_r), alpha=(alpha_l, alpha_r), size=size)\n",
         "\n",
         "\n",
         "        ############################################################################\n",
@@ -511,6 +517,11 @@
         "        # 6. size_i: corresponds to the num_nodes variable input to the torch.geometric.softmax method\n",
         "        # Our implementation is ~4-5 lines, but don't worry if you deviate from this.\n",
         "\n",
+        "        alpha = F.leaky_relu(alpha_i + alpha_j, self.negative_slope)\n",
+        "        alpha = torch_geometric.utils.softmax(alpha, index, ptr, size_i)\n",
+        "        alpha = F.dropout(alpha, p=self.dropout, training=self.training)\n",
+        "\n",
+        "        out = x_j * alpha.view(-1, self.heads, 1)\n",
         "\n",
         "        ############################################################################\n",
         "\n",
