Se creó con Colab

--- a/CS224W_Colab5.ipynb
+++ b/CS224W_Colab5.ipynb
@@ -961,10 +961,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "QvQwxJX4JTJX",
-        "outputId": "d9ccfffe-cb25-482d-cc39-a122d3ba0794",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d9ccfffe-cb25-482d-cc39-a122d3ba0794"
       },
       "source": [
         "if 'IS_GRADESCOPE_ENV' not in os.environ:\n",
@@ -1084,21 +1084,23 @@
         "        node_feature_src,\n",
         "        node_feature_dst,\n",
         "        edge_index,\n",
-        "        size=None\n",
-        "    ):\n",
+        "        size=None):\n",
+        "\n",
         "        ############# Your code here #############\n",
         "        ## (~1 line of code)\n",
         "        ## Note:\n",
         "        ## 1. Unlike Colabs 3 and 4, we just need to call self.propagate with\n",
         "        ## proper/custom arguments.\n",
         "\n",
-        "        pass\n",
+        "        return self.propagate(edge_index, size=size, node_feature_src=node_feature_src, node_feature_dst=node_feature_dst)\n",
+        "\n",
+        "\n",
         "\n",
         "        ##########################################\n",
         "\n",
         "    def message_and_aggregate(self, edge_index, node_feature_src):\n",
         "\n",
-        "        out = None\n",
+        "\n",
         "        ############# Your code here #############\n",
         "        ## (~1 line of code)\n",
         "        ## Note:\n",
@@ -1114,7 +1116,7 @@
         "        ## 4. Conceptually, think through how the message passing and aggregation\n",
         "        ##    expressed mathematically can be expressed through matrix multiplication.\n",
         "\n",
-        "        pass\n",
+        "        out = torch_sparse.matmul(edge_index, node_feature_src, reduce=self.aggr)\n",
         "\n",
         "\n",
         "        ##########################################\n",
@@ -1130,14 +1132,17 @@
         "        ## 2. Think through the one-one connection between the mathematical update\n",
         "        ##    rule and the 3 linear layers defined in the constructor.\n",
         "\n",
-        "       pass\n",
+        "        aggr_out = torch.cat(self.lin_dst(node_feature_dst), self.lin_src(aggr_out))\n",
+        "\n",
+        "        aggr_out = self.lin_update(aggr_out)\n",
+        "\n",
         "\n",
         "\n",
         "        ##########################################\n",
         "\n",
         "        return aggr_out"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
