--- a/CS224W_Colab5.ipynb
+++ b/CS224W_Colab5.ipynb
@@ -1273,7 +1273,7 @@
         "            ## Note:\n",
         "            ## 1. Explore the function parameter `xs`!\n",
         "\n",
-        "            pass\n",
+        "            return torch.stack(xs).mean(dim=0)\n",
         "\n",
         "            ##########################################\n",
         "\n",
@@ -1293,7 +1293,7 @@
         "            x = x * alpha\n",
         "            return x.sum(dim=0)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
