Se creó con Colab

--- a/CS224W_Colab5.ipynb
+++ b/CS224W_Colab5.ipynb
@@ -1316,6 +1316,69 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(hete.message_types)\n",
+        "print(hete.num_node_features())\n",
+        "print(hete.node_types)\n",
+        "print(hete.num_node_labels())\n",
+        "print(hete.node_feature)"
+      ],
+      "metadata": {
+        "id": "BOoFBUO-z22Y",
+        "outputId": "b2712a62-33ee-4d7a-ab5e-f709f7bda4a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('n0', 'e0', 'n0'), ('n0', 'e2', 'n1'), ('n1', 'e1', 'n1')]\n",
+            "{'n0': 5, 'n1': 5}\n",
+            "['n0', 'n1']\n",
+            "{'n0': 1, 'n1': 1}\n",
+            "{'n0': tensor([[1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.]]), 'n1': tensor([[1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1.]])}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "hSBImHClJzf4"
       },
@@ -1333,14 +1396,30 @@
         "    ## 1. See the hints above!\n",
         "    ## 2. conv is of type `HeteroGNNConv`\n",
         "\n",
-        "    pass\n",
+        "    for i in range(len(hetero_graph.message_types)):\n",
+        "\n",
+        "        message_type = hetero_graph.message_types[i]\n",
+        "        src_type, edge_type, dst_type = message_type\n",
+        "\n",
+        "        if first_layer:\n",
+        "            in_channels = hetero_graph.num_node_features(src_type)\n",
+        "            dst_channels = hetero_graph.num_node_features(dst_type)\n",
+        "            out_channels = hidden_size\n",
+        "\n",
+        "        else:\n",
+        "            in_channels = hidden_size\n",
+        "            dst_channels = hidden_size\n",
+        "            out_channels = hidden_size\n",
+        "\n",
+        "        convs[message_type] = conv(in_channels, dst_channels, out_channels)\n",
+        "        print(convs[message_type])\n",
         "\n",
         "\n",
         "    ##########################################\n",
         "\n",
         "    return convs"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1394,7 +1473,15 @@
         "        ##    `deepsnap.hetero_graph.HeteroGraph.num_node_labels(node_type)` will be\n",
         "        ##    useful.\n",
         "\n",
-        "        pass\n",
+        "        self.convs1 = HeteroGNNWrapperConv(generate_convs(hetero_graph, HeteroGNNConv, self.hidden_size, first_layer=True), args, self.aggr)\n",
+        "        self.convs2 = HeteroGNNWrapperConv(generate_convs(hetero_graph, HeteroGNNConv, self.hidden_size, first_layer=False), args, self.aggr)\n",
+        "\n",
+        "        for node_type in deepsnap.hetero_graph.HeteroGraph.node_types:\n",
+        "          self.bns1[node_type] = torch.nn.BatchNorm(self.hidden_size, eps=1)\n",
+        "          self.bns2[node_type] = torch.nn.BatchNorm(self.hidden_size, eps=1)\n",
+        "          self.relus1[node_type] = nn.LeakyReLU()\n",
+        "          self.relus2[node_type] = nn.LeakyReLU()\n",
+        "          self.post_mps[node_type] = nn.Linear(self.hidden_size, hetero_graph.num_node_labels(node_type))\n",
         "\n",
         "\n",
         "        ##########################################\n",
@@ -1406,14 +1493,18 @@
         "        # tensors where keys are message types and values are corresponding\n",
         "        # edge index tensors (with respect to each message type).\n",
         "\n",
-        "        x = node_feature\n",
+        "\n",
         "\n",
         "        ############# Your code here #############\n",
         "        ## (~7 lines of code)\n",
         "        ## Note:\n",
         "        ## 1. `deepsnap.hetero_gnn.forward_op` can be helpful.\n",
         "\n",
-        "        pass\n",
+        "        x = self.convs1(node_feature, edge_index)\n",
+        "        x = deepsnap.hetero_gnn.forward_op(x, self.bns1, self.relus1)\n",
+        "        x = self.convs2(x, edge_index)\n",
+        "        x = deepsnap.hetero_gnn.forward_op(x, self.bns2, self.relus2)\n",
+        "        x = self.post_mps(x)\n",
         "\n",
         "\n",
         "        ##########################################\n",
@@ -1431,17 +1522,18 @@
         "        ## 1. For each node type in preds, accumulate computed loss to `loss`\n",
         "        ## 2. Loss need to be computed with respect to the given index\n",
         "        ## 3. preds is a dictionary of model predictions keyed by node_type.\n",
-        "        ## 4. indeces is a dictionary of labeled supervision nodes keyed\n",
+        "        ## 4. indices is a dictionary of labeled supervision nodes keyed\n",
         "        ##    by node_type\n",
         "\n",
-        "        pass\n",
+        "        for node_type in preds:\n",
+        "          loss += loss_func(preds[node_type][indices[node_type]], y[node_type][indices[node_type]])\n",
         "\n",
         "\n",
         "        ##########################################\n",
         "\n",
         "        return loss"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
